--- a/ClashRoyale/Info.plist
+++ b/ClashRoyale/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Para mostrar las fotos de los personajes</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Supercell-magic-webfont.ttf</string>
